--- a/git-prompt.cabal
+++ b/git-prompt.cabal
@@ -45,4 +45,10 @@ executable gitstatus
 
   hs-source-dirs: src
   
-
+test-suite gitpromptstatus-tests
+  default-language:  Haskell2010
+  type:              exitcode-stdio-1.0
+  hs-source-dirs:    src
+  main-is:           TestBranchParse.hs
+  build-depends:     base, parsec >=3.1 && <3.2, process>=1.1.0.2,
+                     QuickCheck
