--- a/git-prompt.cabal
+++ b/git-prompt.cabal
@@ -33,7 +33,7 @@ executable gitstatus
   
   -- other-extensions:    
   
-  build-depends:       base, parsec >=3.1 && <3.2, process>=1.1.0.2
+  build-depends:       base, parsec >=3.1 && <3.2, process>=1.1.0.2, QuickCheck
   
   -- hs-source-dirs:      
   
