--- a/git-prompt.cabal
+++ b/git-prompt.cabal
@@ -45,10 +45,16 @@ executable gitstatus
 
   hs-source-dirs: src
   
-test-suite gitpromptstatus-tests
+test-suite tests-branch
   default-language:  Haskell2010
   type:              exitcode-stdio-1.0
   hs-source-dirs:    src
   main-is:           TestBranchParse.hs
-  build-depends:     base, parsec >=3.1 && <3.2, process>=1.1.0.2,
-                     QuickCheck
+  build-depends:     base, parsec >=3.1 && <3.2, process>=1.1.0.2, QuickCheck
+
+test-suite tests-functional
+  default-language:  Haskell2010
+  type:              exitcode-stdio-1.0
+  hs-source-dirs:    src
+  main-is:           TestFunctional.hs
+  build-depends:     base, parsec >=3.1 && <3.2, process>=1.1.0.2, HUnit, QuickCheck
