--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,9 @@ skipsdist = True
 
 [testenv]
 commands = python -m pytest {posargs}
-deps = pytest
+deps =
+    pytest
+    mock
 
 [testenv:flake8]
 commands = python -m flake8
