--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,10 @@ skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
-commands = python -m pytest {posargs}
+commands = python -m pytest {posargs} --cov=gitstatus --cov-report term-missing
 deps =
     pytest
+    pytest-cov
     mock
 
 [testenv:flake8]
